--- a/index.html
+++ b/index.html
@@ -1,207 +1,1 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-    <meta charset="UTF-8">
-    <title>Fee-Adjusted Profit Calculator</title>
-    <style>
-        /* Basic Reset */
-        * {
-            box-sizing: border-box;
-            margin: 0;
-            padding: 0;
-        }
-
-        body {
-            font-family: Arial, sans-serif;
-            background: #f4f4f4;
-            color: #333;
-            padding: 20px;
-        }
-
-        .container {
-            max-width: 600px;
-            margin: 0 auto;
-            background: #fff;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            padding: 20px;
-        }
-
-        h1 {
-            text-align: center;
-            margin-bottom: 20px;
-            font-weight: normal;
-        }
-
-        .form-group {
-            margin-bottom: 15px;
-        }
-
-        label {
-            display: block;
-            margin-bottom: 5px;
-            font-weight: 600;
-        }
-
-        input[type="number"],
-        input[type="text"] {
-            width: 100%;
-            padding: 8px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            font-size: 14px;
-            transition: border-color 0.2s;
-        }
-
-        input[type="number"]:focus,
-        input[type="text"]:focus {
-            border-color: #7faee6;
-            outline: none;
-        }
-
-        .checkbox-group {
-            display: flex;
-            align-items: center;
-            margin: 10px 0;
-        }
-
-        .checkbox-group input[type="checkbox"] {
-            margin-right: 10px;
-            transform: scale(1.2);
-        }
-
-        .btn {
-            display: inline-block;
-            background: #007bff;
-            color: #fff;
-            border: none;
-            padding: 10px 20px;
-            border-radius: 4px;
-            font-size: 16px;
-            cursor: pointer;
-            margin-top: 10px;
-        }
-
-        .btn:hover {
-            background: #0056b3;
-        }
-
-        .result-container {
-            margin-top: 20px;
-            padding: 15px;
-            background: #f9f9f9;
-            border: 1px solid #ececec;
-            border-radius: 4px;
-        }
-
-        .result-container p {
-            margin-bottom: 10px;
-            font-size: 16px;
-        }
-
-        hr {
-            margin: 20px 0;
-        }
-    </style>
-</head>
-
-<body>
-
-    <div class="container">
-        <h1>Fee-Adjusted Profit Calculator</h1>
-
-        <div class="form-group">
-            <label for="invested">Total Invested ($)</label>
-            <input id="invested" type="number" step="any" placeholder="e.g. 1000">
-        </div>
-
-        <div class="form-group">
-            <label for="sold">Total Sold ($)</label>
-            <input id="sold" type="number" step="any" placeholder="e.g. 1200">
-        </div>
-
-        <div class="checkbox-group">
-            <input id="novaCheck" type="checkbox">
-            <label for="novaCheck" style="display: inline;">Use Nova</label>
-        </div>
-
-        <div class="form-group">
-            <label for="solanaPrice">Solana Price ($)</label>
-            <input id="solanaPrice" type="number" step="any" placeholder="e.g. 25">
-        </div>
-
-        <div class="form-group">
-            <label for="gasPriority">Gas Priority Fee (in SOL)</label>
-            <input id="gasPriority" type="number" step="any" placeholder="e.g. 0.0005">
-        </div>
-
-        <div class="form-group">
-            <label for="bribeFee">Bribe Fee (in SOL)</label>
-            <input id="bribeFee" type="number" step="any" placeholder="e.g. 0.001">
-        </div>
-
-        <button class="btn" onclick="computeProfit()">Compute Profit</button>
-
-        <hr>
-
-        <div id="result" class="result-container"></div>
-    </div>
-
-    <script>
-        function computeProfit() {
-            // Read inputs
-            const invested = parseFloat(document.getElementById("invested").value) || 0;
-            const sold = parseFloat(document.getElementById("sold").value) || 0;
-            const novaChecked = document.getElementById("novaCheck").checked;
-            const solanaPrice = parseFloat(document.getElementById("solanaPrice").value) || 0;
-            const gasPriority = parseFloat(document.getElementById("gasPriority").value) || 0;
-            const bribeFee = parseFloat(document.getElementById("bribeFee").value) || 0;
-
-            // Function to compute bullx fee (in dollars) for a given $ amount
-            function bullxFee(amount) {
-                if (novaChecked) {
-                    // If Nova is checked, just 1% of amount (no min)
-                    return 0.01 * amount;
-                } else {
-                    // Otherwise, 1% of amount, but at least 0.001 SOL worth of USD
-                    const feeInDollars = 0.01 * amount;
-                    const minDollars = 0.001 * solanaPrice;
-                    return (feeInDollars < minDollars) ? minDollars : feeInDollars;
-                }
-            }
-
-            // Compute buy fees in $
-            const bullxBuy = bullxFee(invested);
-            const pumpfunBuy = 0.01 * invested;
-            const gasPrioBuy = gasPriority * solanaPrice;
-            const bribeBuy = bribeFee * solanaPrice;
-
-            // Compute sell fees in $
-            const bullxSell = bullxFee(sold);
-            const pumpfunSell = 0.01 * sold;
-            const gasPrioSell = gasPriority * solanaPrice;
-            const bribeSell = bribeFee * solanaPrice;
-
-            // Sum total fees
-            const totalFees = bullxBuy + pumpfunBuy + gasPrioBuy + bribeBuy +
-                bullxSell + pumpfunSell + gasPrioSell + bribeSell;
-
-            // Raw profit
-            const rawProfit = sold - invested;
-
-            // Fee-adjusted profit
-            const feeAdjustedProfit = rawProfit - totalFees;
-
-            // Update result display
-            const resultDiv = document.getElementById("result");
-            resultDiv.innerHTML = `
-        <p><strong>Total Fees:</strong> $${totalFees.toFixed(2)}</p>
-        <p><strong>Profit (Before Fees):</strong> $${rawProfit.toFixed(2)}</p>
-        <p><strong>Fee-Adjusted Profit:</strong> $${feeAdjustedProfit.toFixed(2)}</p>
-      `;
-        }
-    </script>
-</body>
-
-</html>
+<a href="/fee-adjusted-profit.html">Fee Adjusted Profit Calculator</a>
