--- a/fee-adjusted-profit.html
+++ b/fee-adjusted-profit.html
@@ -109,6 +109,7 @@
 <body>
 
     <div class="container">
+        <span>This is just an approximation! Use the Solana price at the time of the trade and use the correct fee values when you did the trade.</span>
         <h1>Fee-Adjusted Profit Calculator</h1>
 
         <div class="form-group">
