--- a/fee-adjusted-profit.html
+++ b/fee-adjusted-profit.html
@@ -109,9 +109,9 @@
 <body>
 
     <div class="container">
-        <span>This is just an approximation! Use the Solana price at the time of the trade and use the correct fee values when you did the trade.</span>
         <h1>Fee-Adjusted Profit Calculator</h1>
-
+        <span>This is just an approximation! Use the Solana price at the time of the trade and use the correct fee values when you did the trade.</span>
+        <span>Bullx has a min. fee of 0.001 sol. You can sidestep that by using nova. So the nova checkbox only affects the calculation for small values.</span>
         <div class="form-group">
             <label for="invested">Total Invested ($)</label>
             <input id="invested" type="number" step="any" placeholder="e.g. 10">
